Fix login, register, forgot form validation

--- a/public/css/front-end.css
+++ b/public/css/front-end.css
@@ -1,5 +1,5 @@
 .form-control::-webkit-input-placeholder {
-  color: #F9F8F8 !important;
+  color: #cccccc !important;
 }
 .submit {
   color: #505460;
