--- a/public/css/front-end.css
+++ b/public/css/front-end.css
@@ -13,3 +13,88 @@
   box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.3);
   border-radius: 60px !important;
 }
+.card {
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+    .img-post{    
+    
+    object-fit: cover;
+    
+    border-radius: 5vw;
+    
+}
+.comment p {
+  display: inline;
+
+}
+.comment h6 {
+  font-weight: 700;
+  padding: 0;
+  margin: 0 0 .25rem;
+}
+.pointer{
+cursor: pointer;
+}
+.child-comment {
+  padding-left: 50px;
+
+}
+.child-comment img{
+height: 1.9rem;
+width: 1.9rem;
+}       
+.img-circle{    
+
+object-fit: cover;
+
+border-radius: 5vw;
+
+}
+.single-comment{
+margin-left: 10px;
+display: inline-block;
+background: #f0f2f5;
+font-size: 9pt;
+flex-grow: 1;
+padding: 0.5em 13px;    
+border-radius: 10px;
+}
+.comment-reply{
+  margin-left: 50px;
+font-size: 8pt;
+margin-top: 2px;
+margin-bottom: 2px;
+  
+}
+.parrent-reply{
+  margin-left: 60px !important;
+}
+.comment{
+display: flex;
+/* margin: 1.2em 10px; */
+}
+.img-comment{
+height: 2.5rem;
+width: 2.5rem;
+}
+#btn-balas{
+  width: 25px;
+  height: auto;
+  margin-right: 17px;
+  margin-left: 5px;
+}
+
+.white {
+  color: hsl(0, 5%, 75%);
+
+}
+.red {color: rgb(240, 56, 56);
+
+}
+.hide{
+  display: none !important; 
+}
